--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,7 +14,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".home.HomeActivity">
+            tools:context=".home.view.HomeActivity">
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar_home"
